# bus-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html  linkedin_post.md  render_arch.py  render_linkedin_card.py
packaging/: install.sh
packaging/systemd/: bus-mcp.service.in
src/bus_mcp/: __init__.py  cli.py  discovery.py  registry.py  safety.py  server.py  tools.py
src/bus_mcp/buses/: __init__.py  can.py  gpio.py  i2c.py  serial.py  spi.py
tests/: test_discovery.py  test_registry.py  test_safety.py  test_tools.py
